--- a/HTML.html
+++ b/HTML.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>하나를 골라야 한다면...</h1>
         <div id="imageContainer">
-            <img id="displayedImage" src="" alt="Displayed Image">
+            <img id="displayedImage" src="" alt="Displayed Image" style="display: none;">
         </div>
         <div id="question">이 질문은 어떤가요?</div>
         <div class="choices">
@@ -19,7 +19,6 @@
         </div>
         <div id="feedback"></div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
